<resources>
    <string name="app_name">Famous Quotes</string>
    <string name="title_text">Phrase Consulting</string>
    <string name="tips_text_button">Tips</string>
    <string name="phrase_text_button">Phrase</string>
    <string name="tips_button_advice">You tapped the tips button!</string>
    <string name="phrase_button_advice">You tapped the phrase button!</string>
    <string name="phrase_result_hint_textview">Resultado..</string>
    <string name="autor_hint_textview">Autor</string>
    <string name="new_phrase_text_button">Nueva Frase</string>
    <string name="to_activity_main_text_button">Atrás</string>
</resources>
