<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/tips_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tips_text_button"
            app:layout_constraintBottom_toTopOf="@+id/phrase_button"
            app:layout_constraintEnd_toEndOf="@+id/title_textview"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/title_textview"
            app:layout_constraintTop_toBottomOf="@+id/title_textview"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/phrase_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/phrase_text_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tips_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tips_button"
            app:layout_constraintTop_toBottomOf="@+id/tips_button" />

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/title_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="643dp"
            android:clickable="false"
            android:focusable="auto"
            android:forceHasOverlappingRendering="false"
            app:barrierDirection="top"
            app:constraint_referenced_ids="phrase_button,tips_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.49"
            tools:layout_editor_absoluteX="162dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>